force-app/main/default/objects/Life_Skills__c/Life_Skills__c.object-meta.xml
<CustomObject>
    <label>Life Skills</label>
    <nameField>
        <displayFormat>LS-{0000}</displayFormat>
        <label>Life Skills Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>