force-app/main/default/objects/Life_Skills__c/fields/CLSA_Date__c.field-meta.xml
<CustomField>
    <fullName>CLSA_Date__c</fullName>
    <label>CLSA Date</label>
    <type>Date</type>
</CustomField>