force-app/main/default/objects/Life_Skills__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Life Skills</relationshipLabel>
    <relationshipName>Life_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>