force-app/main/default/objects/Life_Skills__c/fields/Document_Location__c.field-meta.xml
<CustomField>
    <fullName>Document_Location__c</fullName>
    <label>Document Location</label>
    <type>TextArea</type>
</CustomField>